# tt-nmbs

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  LICENSE  README.md  TASKS  annotated.html  c_2nmbs_8h.html  c_2nmbs_8h_source.html  classes.html  classnmbs_1_1exception-members.html  classnmbs_1_1exception.html  confidentiality__label_8h.html  confidentiality__label_8h_source.html  constants_8h.html  constants_8h_source.html  dir_70c8b42ef04a7de60476e271ac0f3795.html  dir_9f703a10b1571b11d041fbe5bd39f7b1.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e68e8157741866f444e17edd764ebbae.html  exception_8h_source.html  exceptions_8h.html  exceptions_8h_source.html  exit__code_8h.html  exit__code_8h_source.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  (+26 more)
.github/workflows/: ci.yml
cmake/: manpages.cmake
debian/: changelog  control  copyright  libnmbs-doc.doc-base  libnmbs-doc.docs  libnmbs1.install  libnmbs1.xmlcatalogs  nautilus-nmbs.install  nmbs.install
debian/source/: options
docker/: build.dockerfile
search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  (+18 more)
targets/: CMakeLists.txt  Config.cmake.in
targets/NMBS-CLI/: CMakeLists.txt
targets/NMBS-CLI/resources/: nl-cl.xsd  nl-mb.xsd
targets/NMBS-CLI/src/: nmbs-xmp.cpp
targets/NMBS-Get-XMP/: CMakeLists.txt
targets/NMBS-Get-XMP/src/: nmbs-get-xmp.cpp
targets/NMBS-LIB/: CMakeLists.txt
targets/NMBS-LIB/include/nmbs/: nmbs.h
targets/NMBS-LIB/src/: nmbs.cpp
targets/NMBS-Library/: CMakeLists.txt
targets/NMBS-Library/doc/: index.md
targets/NMBS-Library/include/nmbs/: binding.h  confidentiality_label.h  constants.h  exception.h  exceptions.h  exit_code.h  expected.h  nmbs.h  nmbs_c.h  spif.h
targets/NMBS-Library/include/nmbs/c/: nmbs.h
targets/NMBS-Library/include/private/nmbs/: nmbs_private.h  spif.h
targets/NMBS-Library/include/public/nmbs/: binding.h  confidentiality_label.h  exit_code.h  expected.h  nmbs.h  nmbs_c.h
targets/NMBS-Library/src/: binding.h  nmbs.cpp  nmbs_c.cpp  nmbs_private.h  version.h.in  xml_c.cpp
targets/NMBS-Library/src/binding/: binding.cpp  http.cpp  sidecar.cpp  xml.cpp  xmp.cpp
targets/NMBS-Nautilus/: CMakeLists.txt
targets/NMBS-Nautilus/src/: nmbs-nautilus.c  org.gnome.nautilus-nmbs.gschema.xml
targets/NMBS-Set-XMP/: CMakeLists.txt
targets/NMBS-Set-XMP/src/: nmbs-set-xmp.cpp
targets/NMBS-Tests/: CMakeLists.txt
targets/NMBS-Tests/src/nmbs/: Basic.tests.cpp  Test.h  basic.tests.cpp  http.tests.cpp  nmbs_c.tests.cpp  spif.tests.cpp  test.h  xml.tests.cpp
targets/NMBS-Tests/src/nmbs/binding/: access_mode.tests.cpp  support.tests.cpp
targets/NMBS-i18n/: CMakeCompileI18n.cmake  CMakeGenerateI18n.cmake  CMakeLists.txt  CMakeVariables.cmake  nmbs.pot
targets/NMBS-i18n/po/: de.po  fr.po
